--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",  
-  "homepage": "https://ogmedina.github.io/React-Portfolio",
+  "homepage": "https://oscar-medina.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
