--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "version": "0.1.0",  
+  "version": "0.1.0",
   "homepage": "https://oscar-medina.com",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "typed.js": "^2.0.12",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
